added create handlers for inventory models
