# backend/docs/swagger/swagger.json
@@ -1154,7 +1154,7 @@
                 }
             }
         },
-        "/business": {
+        "/api/v1/business": {
             "post": {
                 "security": [
                     {
@@ -1303,14 +1303,14 @@
                 }
             }
         },
-        "/business/:id": {
+        "/api/v1/business/:id": {
             "get": {
                 "security": [
                     {
                         "BearerAuth": []
                     }
                 ],
-                "description": "Get a business",
+                "description": "Fetch a branch.",
                 "consumes": [
                     "application/json"
                 ],
@@ -1320,13 +1320,10 @@
                 "tags": [
                     "business"
                 ],
-                "summary": "Get business",
+                "summary": "fetch a branch",
                 "responses": {
                     "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/business.CreateBusinessResponse"
-                        }
+                        "description": "OK"
                     },
                     "400": {
                         "description": "Bad Request"
@@ -1381,7 +1378,7 @@
                 }
             }
         },
-        "/business/all": {
+        "/api/v1/business/all": {
             "get": {
                 "security": [
                     {
@@ -1424,14 +1421,14 @@
                 }
             }
         },
-        "/business/branch": {
+        "/api/v1/business/branch": {
             "post": {
                 "security": [
                     {
                         "BearerAuth": []
                     }
                 ],
-                "description": "Create a branch. A business must have atleast one branch.",
+                "description": "Delete a branch.",
                 "consumes": [
                     "application/json"
                 ],
@@ -1441,7 +1438,7 @@
                 "tags": [
                     "business"
                 ],
-                "summary": "Create a branch",
+                "summary": "Delete a branch",
                 "parameters": [
                     {
                         "description": "Branch details",
@@ -1475,7 +1472,7 @@
                 }
             }
         },
-        "/business/branch/{id}": {
+        "/api/v1/business/branch/{id}": {
             "put": {
                 "security": [
                     {
@@ -1533,7 +1530,7 @@
                 }
             }
         },
-        "/business/create": {
+        "/api/v1/business/create": {
             "post": {
                 "security": [
                     {
@@ -1665,6 +1662,214 @@
                         "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/business.CreateBusinessResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/api/v1/inventory/brand": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Create a new brand.",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "inventory"
+                ],
+                "summary": "Create a brand",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Brand name",
+                        "name": "name",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Brand description",
+                        "name": "description",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "is brand active?",
+                        "name": "isActive",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "file",
+                        "description": "brand logo",
+                        "name": "logo",
+                        "in": "formData"
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/inventory.CreateBrandResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/inventory/category": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Create a category",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "inventory"
+                ],
+                "summary": "Create Category",
+                "parameters": [
+                    {
+                        "description": "category details",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/inventory.Category"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/inventory.CategoryResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/api/v1/inventory/item": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Create an item",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "inventory"
+                ],
+                "summary": "Create Item",
+                "parameters": [
+                    {
+                        "description": "item details",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/inventory.ItemRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/inventory.ItemResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/api/v1/inventory/variation": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Create an item variation",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "inventory"
+                ],
+                "summary": "Create a variant",
+                "parameters": [
+                    {
+                        "description": "variation details",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/inventory.VariationRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/inventory.VariationResponse"
                         }
                     },
                     "400": {
@@ -2613,6 +2818,215 @@
                 "zip_code": {
                     "type": "string",
                     "example": "..."
+                }
+            }
+        },
+        "inventory.Category": {
+            "type": "object",
+            "required": [
+                "name"
+            ],
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "is_active": {
+                    "type": "boolean",
+                    "default": true,
+                    "example": true
+                },
+                "name": {
+                    "type": "string"
+                },
+                "parent_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "inventory.CategoryResponse": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "is_active": {
+                    "type": "boolean"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "parent_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "inventory.CreateBrandResponse": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string",
+                    "example": "..."
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "is_active": {
+                    "type": "boolean",
+                    "example": true
+                },
+                "logo": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string",
+                    "example": "Coca-Cola"
+                }
+            }
+        },
+        "inventory.ItemRequest": {
+            "type": "object",
+            "required": [
+                "brand_id",
+                "category_id",
+                "name"
+            ],
+            "properties": {
+                "brand_id": {
+                    "type": "integer",
+                    "example": 3
+                },
+                "category_id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "description": {
+                    "type": "string"
+                },
+                "is_active": {
+                    "type": "boolean",
+                    "default": true,
+                    "example": true
+                },
+                "name": {
+                    "type": "string",
+                    "example": "Shoes"
+                }
+            }
+        },
+        "inventory.ItemResponse": {
+            "type": "object",
+            "required": [
+                "brand_id",
+                "category_id",
+                "name"
+            ],
+            "properties": {
+                "brand_id": {
+                    "type": "integer",
+                    "example": 3
+                },
+                "category_id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "is_active": {
+                    "type": "boolean"
+                },
+                "name": {
+                    "type": "string",
+                    "example": "Shoes"
+                }
+            }
+        },
+        "inventory.VariationRequest": {
+            "type": "object",
+            "required": [
+                "item_id",
+                "name",
+                "price",
+                "sku",
+                "unit"
+            ],
+            "properties": {
+                "barcode": {
+                    "type": "string",
+                    "example": "..."
+                },
+                "color": {
+                    "type": "string",
+                    "example": "black"
+                },
+                "is_active": {
+                    "type": "boolean",
+                    "default": true
+                },
+                "item_id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "name": {
+                    "type": "string",
+                    "example": "...."
+                },
+                "price": {
+                    "type": "number",
+                    "example": 4000
+                },
+                "size": {
+                    "type": "string",
+                    "example": "xl"
+                },
+                "sku": {
+                    "type": "string",
+                    "example": "GTR30l"
+                },
+                "unit": {
+                    "type": "string",
+                    "example": "carton"
+                }
+            }
+        },
+        "inventory.VariationResponse": {
+            "type": "object",
+            "properties": {
+                "barcode": {
+                    "type": "string"
+                },
+                "color": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "is_active": {
+                    "type": "boolean"
+                },
+                "item_id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "string"
+                },
+                "size": {
+                    "type": "string"
+                },
+                "sku": {
+                    "type": "string"
+                },
+                "unit": {
+                    "type": "string"
                 }
             }
         },
